    - Fix a long standing bug in devnames retrieval that did not strip
      newlines from the devnames input and caused cdebconf to screw
      up on subsequent questions.
    - Bump the DHCP wait to 15 seconds. The magic number seems to be just
      over 10 for me. (Closes: #244819)
    - Template cleanups: netcfg/static-title, netcfg/dhcp-title,
      netcfg/internal-pcmcia
    - Remove a lot of calls to /sbin/this and /sbin/that in response to Joey's
      rant on debian-boot.

 -- Joshua Kwan <joshk@triplehelix.org>  Sat,  8 May 2004 18:17:05 -0700

netcfg (0.63) unstable; urgency=low

  * Per Olofsson
    - Map 127.0.0.1 to localhost in /etc/hosts, make the hostname
      an alias instead.
  * Joey Hess
    - Corrected innaccuracy in the description of ad-hoc networks.
  * Matt Kraai
    - Do not overwrite the resolv.conf created by the DHCP client.
  * Joshua Kwan
    - Remove debugging code that was not intended for 0.62.
    - Disambiguate wireless_wep template that was confusing if the card
      had associated successfully without previous user intervention by
      pointing out that ${device} is a wireless device.

 -- Matt Kraai <kraai@debian.org>  Thu, 15 Apr 2004 20:41:59 -0700

netcfg (0.62) unstable; urgency=low

  * Joshua Kwan
    - Switch to new debhelper udeb support.
    - Stick /sbin back. It was module-init-tools' fault.
    - Re-UTF8ize changelog.
    - Add a progress bar that waits 3 seconds for us to associate with an
      AP. If after 3 seconds there is no association, then bail out, and
      have the user type in the ESSID. From here it's possible to return
      to automatic configuration, if, say, the user moves closer to the AP
      and it can associate.
    - Pull udhcpc.default.script because udhcpc-udeb isn't available
      anymore.
    - Blank gateway is now accepted. (Closes: #241509, #238809)
    - Put own hostname in 127.0.0.1 hosts entry. (Closes: #238305, #237779)