@@ -23,6 +23,7 @@ netcfg (0.64) UNRELEASED; urgency=low
       over 10 for me. (Closes: #244819)
     - Template cleanups: netcfg/static-title, netcfg/dhcp-title,
       netcfg/internal-pcmcia
+    - Add dhcp3-client support.
     - Remove a lot of calls to /sbin/this and /sbin/that in response to Joey's
       rant on debian-boot.
 
